syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mycompany.myapp.grpc";

import "google/protobuf/empty.proto";

package com.mycompany.myapp;

service HealthService {
    rpc GetHealth(google.protobuf.Empty) returns (Health);
}

enum Status {
    UNKNOWN = 0;
    UP = 1;
    DOWN = 2;
    OUT_OF_SERVICE = 3;
}

message HealthIndicator {
    Status status = 1;
    map<string, string> details = 2;
}

message Health {
    Status status = 1;
    map<string, HealthIndicator> healthIndicators = 2;
}
